# LinkedIn-AIAutoPost

./: .env.example  .gitignore  AGENTS.md  backend_new_features.md  gemini_client.py  linkedin_api.py  linkedin_workflow.py  main.py  pyproject.toml  readme.md  requirements.txt  tavily_search.py  test_tavily.py  token_storage.py
backend/: AGENTS.md  frontend_documentation.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 743cf38d230d_initial_migration.py
backend/app/: main.py
backend/app/agent_prompts/: editor_agent.jinja2  seo_agent.jinja2
backend/app/api/: linkedin_router.py  post_router.py
backend/app/clients/: __init__.py  db.py
backend/app/models/: db_models.py  linkedin_models.py
backend/app/services/: gemini_service.py  linkedin_service.py  multi_agent_service.py  post_service.py  user_service.py  workflow_service.py
backend/app/tools/: tavily_tool.py
backend/scripts/: seed_user.py
backend/src/: __init__.py  main.py
backend/src/agent_prompts/: research_agent.jinja2  strategy_agent.jinja2  visual_designer_agent.jinja2  writer_agent.jinja2
backend/src/api/: linkedin_router.py  post_router.py
backend/src/clients/: db_client.py
backend/src/controller/: linkedin_router.py  post_router.py  user_router.py
backend/src/framework/: __init__.py  config.py  db_schema.py  exceptions.py  validators.py
backend/src/models/: db_models.py  post_models.py  user_models.py
backend/src/services/: multi_agent_service.py  post_service.py  user_service.py  workflow_service.py
backend/src/tools/: __init__.py
(+50 files in other folders)
